--- a/1-styles.css
+++ b/1-styles.css
@@ -414,15 +414,17 @@ li a {
 }
 
 .what-we-do-title {
-    font-size: 2.25rem;
+    font-family: var(--main-font);
+    font-size: 32px;
     font-weight: 600;
     color: var(--text-black);
     margin-bottom: 3rem;
-    line-height: 1.2;
+    line-height: 100%;
 }
 
 .what-we-do-description {
-    font-size: 1rem;
+    font-family: var(--main-font);
+    font-size: 16px;
     color: var(--text-black);
     line-height: 1.5;
     max-width: 637px;
@@ -457,7 +459,7 @@ li a {
 }
 
 .feature-title {
-    font-size: 1.25rem;
+    font-size: 32px;
     font-weight: 600;
     color: var(--text-black);
     margin-bottom: 1rem;
@@ -465,7 +467,7 @@ li a {
 }
 
 .feature-description {
-    font-size: 0.875rem;
+    font-size: 16px;
     color: var(--text-black);
     line-height: 1.4;
     max-width: 180px;
